--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -22,8 +22,8 @@ log4j.appender.W.File=/data/apps/helloJay/logs/warn.log
 log4j.appender.W.layout=org.apache.log4j.PatternLayout
 log4j.appender.W.layout.ConversionPattern=[%d{MMdd HH:mm:ss SSS\} %-5p] [%t] %c{3\} - %m%n
 log4j.appender.W.filter.F=org.apache.log4j.varia.LevelRangeFilter
-log4j.appender.W.filter.F.LevelMin=INFO
-log4j.appender.W.filter.F.LevelMax=INFO
+log4j.appender.W.filter.F.LevelMin=WARN
+log4j.appender.W.filter.F.LevelMax=WARN
 #ERR appender
 log4j.appender.E=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.E.datePattern='.'yyyy-MM-dd'.history'
