--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -17,7 +17,7 @@ log4j.appender.I.filter.F.LevelMax=INFO
 #WARN appender
 log4j.appender.W=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.W.Append=true
-#log4j.appender.I.File=C\:\\Users\\Administrator\\Desktop\\log\\info.log
+#log4j.appender.I.File=C\:\\Users\\Administrator\\Desktop\\log\\warn.log
 log4j.appender.W.File=/data/apps/helloJay/logs/warn.log
 log4j.appender.W.layout=org.apache.log4j.PatternLayout
 log4j.appender.W.layout.ConversionPattern=[%d{MMdd HH:mm:ss SSS\} %-5p] [%t] %c{3\} - %m%n
