--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO,C,I,W,E
+log4j.rootLogger=INFO,C,I,DEBUG,E
 #Console appender
 log4j.appender.C=org.apache.log4j.ConsoleAppender
 log4j.appender.C.layout=org.apache.log4j.PatternLayout
@@ -15,15 +15,15 @@ log4j.appender.I.filter.F=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.I.filter.F.LevelMin=INFO
 log4j.appender.I.filter.F.LevelMax=INFO
 #WARN appender
-log4j.appender.W=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.W.Append=true
-#log4j.appender.I.File=C\:\\Users\\Administrator\\Desktop\\log\\warn.log
-log4j.appender.W.File=/data/apps/helloJay/logs/warn.log
-log4j.appender.W.layout=org.apache.log4j.PatternLayout
-log4j.appender.W.layout.ConversionPattern=[%d{MMdd HH:mm:ss SSS\} %-5p] [%t] %c{3\} - %m%n
-log4j.appender.W.filter.F=org.apache.log4j.varia.LevelRangeFilter
-log4j.appender.W.filter.F.LevelMin=WARN
-log4j.appender.W.filter.F.LevelMax=WARN
+log4j.appender.DEBUG=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.DEBUG.Append=true
+#log4j.appender.DEBUG.File=C\:\\Users\\Administrator\\Desktop\\log\\debug.log
+log4j.appender.DEBUG.File=/data/apps/helloJay/logs/debug.log
+log4j.appender.DEBUG.layout=org.apache.log4j.PatternLayout
+log4j.appender.DEBUG.layout.ConversionPattern=[%d{MMdd HH:mm:ss SSS\} %-5p] [%t] %c{3\} - %m%n
+log4j.appender.DEBUG.filter.F=org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.DEBUG.filter.F.LevelMin=DEBUG
+log4j.appender.DEBUG.filter.F.LevelMax=DEBUG
 #ERR appender
 log4j.appender.E=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.E.datePattern='.'yyyy-MM-dd'.history'
