--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
+## mysql
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=123654
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#验证连接的有效性
 spring.datasource.test-while-idle=true
-#获取连接时候验证，会影响性能
 spring.datasource.test-on-borrow=true
 spring.datasource.validation-query=SELECT 1 FROM DUAL
-#空闲连接回收的时间间隔，与test-while-idle一起使用，设置5分钟
 spring.datasource.time-between-eviction-runs-millis=300000
-#连接池空闲连接的有效时间 ，设置30分钟
 spring.datasource.min-evictable-idle-time-millis=1800000
+## dubbo
+spring.dubbo.application.name=provider
+spring.dubbo.registry.address=zookeeper://172.20.100.119:2181
+spring.dubbo.protocol.name=dubbo
+spring.dubbo.protocol.port=20880
+spring.dubbo.scan=cn.hello.jay.practice.dubbo
